test/positive/feature_arbitrarylocaldeclaration.java

public class feature_arbitrarylocaldeclaration {
  public feature_arbitrarylocaldeclaration() {}
  public void m() {
    int x = 42;
    x = x+1;
    int y = x+87;
  }
}

