test/negative/CastExpression2.java
public class CastExpression2 {
    public CastExpression2() {
        int x = 1;
        int y = (CastExpression2+CastExpression2)x;
    }
}
